Fixes infowindow. Adds scrollbars and moved checkboxes to the left of the link

--- a/portal-web/trunk/src/main/webapp/less/infowindow.less
+++ b/portal-web/trunk/src/main/webapp/less/infowindow.less
@@ -452,6 +452,36 @@
   background: url("../img/boxes/box_min_bkg.png") repeat-y;
 }
 
+#content div.infowindow.dialogPopover {
+
+  .content {
+    height: 250px;
+
+    h2 {
+      padding: 0;
+      margin: 0;
+
+    }
+
+    .scrollpane {
+      width: 370px;
+      height: 200px;
+      overflow: auto;
+      outline:none;
+
+      .jspCap { display: block; }
+      .jspCapBottom { height:0; width: 5px;}
+      .jspArrowUp { height: 0; }
+
+    }
+
+    ul { margin: 0 0 10px 0; }
+
+    background: url("../img/boxes/box_min_bkg.png") repeat-y;
+
+  }
+}
+
 #content div.infowindow .content p {
   margin-bottom: 14px;
   font-size: 13px;
